<resources>
  <string name="list_fragment_label">All Notes</string>
  <string name="title_hint">Title</string>
  <string name="description_hint">Description</string>
  <string name="details_fragment_label">Note Details</string>
  <string name="camera_permission_explanation">If permission to use camera is granted, images can be captured and attached to notes.</string>
  <string name="capture_directory">captures</string>
  <string name="edit_note_description">Edit Note</string>
  <string name="add_photo_description">Add Photo</string>
  <string name="save_changes_description">Save Changes</string>
  <string name="cancel_changes_description">Cancel Changes</string>
  <string name="add_note_description">Create New Note</string>
  <string name="login_fragment_label">Sign in to Notes</string>
  <string name="sign_in_failure_message">Unable to sign in with provided credentials.</string>
  <string name="sign_out_title">Sign Out</string>
</resources>