<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".controller.DetailsFragment">

  <LinearLayout
    android:id="@+id/static_content"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="@dimen/half_dynamic_spacing"
    android:gravity="top|start"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/edit"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/title_static"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      tools:text="This note has a title."/>

    <TextView
      android:id="@+id/description_static"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_static_spacing"
      tools:text="This note also has a description, which can (and probably will) wrap to multiple lines."/>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/editable_content"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="@dimen/half_dynamic_spacing"
    android:orientation="vertical"
    android:gravity="top|start"
    android:visibility="gone"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/edit">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/title_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="2"
        android:hint="@string/title_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/description_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      app:hintEnabled="true"
      app:hintAnimationEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_editable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="8"
        android:hint="@string/description_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

  </LinearLayout>


  <!--DONE Define TextView widgets for read-only display of title and description.-->

  <!--DONE Define TextView widgets for display of created and modified dates.-->

  <!--TODO Define TextInputLayout/TextInputEditText pairs for editable title and description.-->

  <!--DONE Define Button or ImageButton widgets for edit/save/cancel actions.-->

  <!--DONE Define ListView widget for images.-->

  <ImageButton
    android:id="@+id/edit"
    android:layout_width="@dimen/edit_button_size"
    android:layout_height="@dimen/edit_button_size"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/edit_note"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/edit_note_description"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/images"
    app:layout_constraintEnd_toStartOf="@id/add_photo"/>

  <ImageButton
    android:id="@+id/add_photo"
    android:layout_width="@dimen/edit_button_size"
    android:layout_height="@dimen/edit_button_size"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/add_photo"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/add_photo_description"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@id/images"
    app:layout_constraintStart_toEndOf="@id/edit"
    app:layout_constraintEnd_toStartOf="@id/save"/>

  <ImageButton
    android:id="@+id/save"
    android:layout_width="@dimen/edit_button_size"
    android:layout_height="@dimen/edit_button_size"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/save_changes"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/save_changes_description"
    android:visibility="invisible"
    app:layout_constraintStart_toEndOf="@id/add_photo"
    app:layout_constraintBottom_toTopOf="@id/images"
    app:layout_constraintEnd_toStartOf="@id/cancel"/>

  <ImageButton
    android:id="@+id/cancel"
    android:layout_width="@dimen/edit_button_size"
    android:layout_height="@dimen/edit_button_size"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/cancel_edit"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/cancel_changes_description"
    android:visibility="invisible"
    app:layout_constraintStart_toEndOf="@id/save"
    app:layout_constraintBottom_toTopOf="@id/images"
    app:layout_constraintEnd_toEndOf="parent"/>

  <ListView
    android:id="@+id/images"
    android:layout_width="0dp"
    android:layout_height="@dimen/thumbnail_list_height"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/half_dynamic_spacing"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>